--- a/docs/resources/google_compute_firewalls.md.erb
+++ b/docs/resources/google_compute_firewalls.md.erb
@@ -5,7 +5,7 @@ platform: gcp
 
 # google\_compute\_firewalls
 
-Use the `google_compute_firewalls` InSpec audit resource to test properties of all GCP compute firewalls for a project.
+Use the `google_compute_firewalls` InSpec audit resource to test properties of all, or a filtered group of, GCP compute firewalls for a project.
 
 <br>
 
@@ -35,13 +35,7 @@ The following examples show how to use this InSpec audit resource.
 ### Test that there are no more than a specified number of firewalls available for the project
 
     describe google_compute_firewalls(project: 'chef-inspec-gcp') do
-      its('entries.count') { should be <= 100}
-    end
-
-### Test the exact number of firewalls in the project
-
-    describe google_compute_firewalls(project: 'chef-inspec-gcp') do
-      its('firewall_ids.count') { should cmp 8 }
+      its('count') { should be <= 100}
     end
 
 ### Test that an expected firewall is available for the project
@@ -58,19 +52,21 @@ The following examples show how to use this InSpec audit resource.
 
 ### Test there are no firewalls for the "INGRESS" direction
 
-    describe google_compute_firewalls(project: 'chef-inspec-gcp') do
-      its('firewall_directions') { should_not include "INGRESS" }
+    describe google_compute_firewalls(project: 'chef-inspec-gcp').where(firewall_direction: 'INGRESS') do
+      it { should_not exist }
     end
 
 <br>
 
 ## Filter Criteria
 
-This resource currently does not support any filter criteria; it will always fetch all available firewalls.
+This resource supports the following filter criteria:  `firewall_id`; `firewall_name`; and `firewall_direction`. Any of these may be used with `where`, as a block or as a method.
 
 ## Properties
 
-*  `firewall_id`, `firewall_name`, `firewall_directions`
+*  `firewall_ids` - an array of google_compute_firewall identifier integers
+*  `firewall_names` - an array of google_compute_firewall name strings
+*  `firewall_directions`- an array of google_compute_firewall directions containing strings e.g. "INGRESS" or "EGRESS"
 
 <br>
 
